--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: "15418 Final Project: Parallelized Seam Carving" > # the website title (if blank, full name will be used instead)
+title: "Parallelized Seam Carving" # the website title (if blank, full name will be used instead)
 first_name: Michelle
 middle_name: 
 last_name: Feng
