--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: "Parallelized Seam Carving" # the website title (if blank, full name will be used instead)
 first_name: Michelle
-middle_name: 
+middle_name:
 last_name: Feng
 email: michelle.s.ffeng@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
@@ -320,7 +320,24 @@ enable_publication_badges:
 
 # Filter out certain bibtex entry keywords used internally from the bib output
 filtered_bibtex_keywords:
-  [abbr, abstract, altmetric, arxiv, bibtex_show, blog, code, html, pdf, poster, preview, selected, slides, supp, video, website]
+  [
+    abbr,
+    abstract,
+    altmetric,
+    arxiv,
+    bibtex_show,
+    blog,
+    code,
+    html,
+    pdf,
+    poster,
+    preview,
+    selected,
+    slides,
+    supp,
+    video,
+    website,
+  ]
 
 # Maximum number of authors to be shown for each publication (more authors are visible on click)
 max_author_limit: 3 # leave blank to always show all authors
